# nebari

./: .gitignore  CHANGELOG.md  CNAME  Cargo.toml  README.md  deny.toml
benchmarks/: Cargo.toml  README.md  cloud-init.sh  index.html  overview.html
benchmarks/benches/: nebari-bench.rs
benchmarks/benches/blobs/: mod.rs  nebari.rs  persy.rs  sled.rs  sqlite.rs
benchmarks/benches/logs/: couchdb.rs  mod.rs  nebari.rs  persy.rs  roots.rs  sled.rs  sqlite.rs
benchmarks/blobs-insert/1KiB/report/: index.html
benchmarks/blobs-insert/1MiB/report/: index.html
benchmarks/blobs-insert/64MiB/report/: index.html
benchmarks/blobs-insert/nebari-versioned/report/: index.html
benchmarks/blobs-insert/nebari/report/: index.html
benchmarks/blobs-insert/report/: index.html
benchmarks/blobs-insert/sqlite/report/: index.html
benchmarks/logs-get-10k-rdm/1 row/report/: index.html
benchmarks/logs-get-10k-rdm/100 rows/report/: index.html
benchmarks/logs-get-10k-rdm/625 rows/report/: index.html
benchmarks/logs-get-10k-rdm/nebari-versioned/report/: index.html
benchmarks/logs-get-10k-rdm/nebari/report/: index.html
benchmarks/logs-get-10k-rdm/report/: index.html
benchmarks/logs-get-10k-rdm/sqlite/report/: index.html
benchmarks/logs-get-10k-seq/1 row/report/: index.html
benchmarks/logs-get-10k-seq/100 rows/report/: index.html
benchmarks/logs-get-10k-seq/625 rows/report/: index.html
benchmarks/logs-get-10k-seq/nebari-versioned/report/: index.html
benchmarks/logs-get-10k-seq/nebari/report/: index.html
benchmarks/logs-get-10k-seq/report/: index.html
benchmarks/logs-get-10k-seq/sqlite/report/: index.html
benchmarks/logs-get-1k-rdm/1 row/report/: index.html
benchmarks/logs-get-1k-rdm/32 rows/report/: index.html
benchmarks/logs-get-1k-rdm/64 rows/report/: index.html
benchmarks/logs-get-1k-rdm/nebari-versioned/report/: index.html
benchmarks/logs-get-1k-rdm/nebari/report/: index.html
benchmarks/logs-get-1k-rdm/report/: index.html
benchmarks/logs-get-1k-rdm/sqlite/report/: index.html
benchmarks/logs-get-1k-seq/1 row/report/: index.html
benchmarks/logs-get-1k-seq/32 rows/report/: index.html
benchmarks/logs-get-1k-seq/64 rows/report/: index.html
benchmarks/logs-get-1k-seq/nebari-versioned/report/: index.html
benchmarks/logs-get-1k-seq/nebari/report/: index.html
benchmarks/logs-get-1k-seq/report/: index.html
benchmarks/logs-get-1k-seq/sqlite/report/: index.html
benchmarks/logs-get-1m-rdm/1 row/report/: index.html
benchmarks/logs-get-1m-rdm/1000 rows/report/: index.html
benchmarks/logs-get-1m-rdm/62500 rows/report/: index.html
benchmarks/logs-get-1m-rdm/nebari-versioned/report/: index.html
benchmarks/logs-get-1m-rdm/nebari/report/: index.html
benchmarks/logs-get-1m-rdm/report/: index.html
benchmarks/logs-get-1m-rdm/sqlite/report/: index.html
benchmarks/logs-get-1m-seq/1 row/report/: index.html
benchmarks/logs-get-1m-seq/1000 rows/report/: index.html
benchmarks/logs-get-1m-seq/62500 rows/report/: index.html
benchmarks/logs-get-1m-seq/nebari-versioned/report/: index.html
benchmarks/logs-get-1m-seq/nebari/report/: index.html
benchmarks/logs-get-1m-seq/report/: index.html
benchmarks/logs-get-1m-seq/sqlite/report/: index.html
benchmarks/logs-gets/1000x1000000 random elements/report/: index.html
benchmarks/logs-gets/1000x1000000 sequential elements/report/: index.html
benchmarks/logs-gets/100x100000 random elements/report/: index.html
benchmarks/logs-gets/100x100000 sequential elements/report/: index.html
benchmarks/logs-gets/10x1000 random elements/report/: index.html
benchmarks/logs-gets/10x1000 sequential elements/report/: index.html
benchmarks/logs-gets/1x1000 random elements/report/: index.html
benchmarks/logs-gets/1x1000 sequential elements/report/: index.html
benchmarks/logs-gets/1x100000 random elements/report/: index.html
benchmarks/logs-gets/1x100000 sequential elements/report/: index.html
benchmarks/logs-gets/1x1000000 random elements/report/: index.html
benchmarks/logs-gets/1x1000000 sequential elements/report/: index.html
benchmarks/logs-gets/Roots/report/: index.html
benchmarks/logs-gets/SQLite/report/: index.html
benchmarks/logs-gets/report/: index.html
benchmarks/logs-insert-rdm/1 r_tx/report/: index.html
benchmarks/logs-insert-rdm/100 r_tx/report/: index.html
benchmarks/logs-insert-rdm/1000 r_tx/report/: index.html
benchmarks/logs-insert-rdm/10000 r_tx/report/: index.html
benchmarks/logs-insert-rdm/nebari-versioned/report/: index.html
benchmarks/logs-insert-rdm/nebari/report/: index.html
benchmarks/logs-insert-rdm/report/: index.html
benchmarks/logs-insert-rdm/sqlite/report/: index.html
benchmarks/logs-insert-seq/1 r_tx/report/: index.html
benchmarks/logs-insert-seq/100 r_tx/report/: index.html
benchmarks/logs-insert-seq/report/: index.html
benchmarks/logs-inserts/report/: index.html
benchmarks/logs-scan-10k-rdm/report/: index.html
benchmarks/logs-scan-10k-seq/report/: index.html
benchmarks/logs-scan-1k-rdm/report/: index.html
benchmarks/logs-scan-1k-seq/report/: index.html
benchmarks/logs-scan-1m-rdm/report/: index.html
benchmarks/logs-scan-1m-seq/report/: index.html
benchmarks/report/: index.html
benchmarks/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare_swap.rs
nebari/: Cargo.toml
nebari/benches/logs/: mod.rs  roots.rs
nebari/examples/: embedded-indexes.rs  low-level.rs  simple.rs
nebari/src/: buffer.rs  chunk_cache.rs  context.rs  crate-docs.md  error.rs  lib.rs  roots.rs  storage.rs  test_util.rs  vault.rs
nebari/src/io/: any.rs  fs.rs  memory.rs  mod.rs
nebari/src/managed_file/: fs.rs  memory.rs  mod.rs
nebari/src/storage/: sediment.rs
nebari/src/transaction/: log.rs  manager.rs  mod.rs  state.rs
nebari/src/tree/: btree.rs  btree_entry.rs  by_id.rs  by_sequence.rs  interior.rs  key_entry.rs  mod.rs  modify.rs  root.rs  serialization.rs  state.rs  unversioned.rs  versioned.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs  tree_canvas.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+2021 files in other folders)
