[package]
name = "benchmarks"
version = "0.1.0"
edition = "2018"
publish = false
autotests = false
autoexamples = false
autobins = false

[features]
default = ["sled", "sqlite", "persy"]
# To enable
couchdb = ["serde_json", "ureq", "http-auth-basic"]
sled = ["_sled"]
sqlite = ["rusqlite"]

[[bench]]
name = "nebari-bench"
harness = false

[dependencies]
nanorand = "0.6"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
tracing-flame = "0.1"
tracing-subscriber = "0.2"
tempfile = "3"
criterion = { version = "0.3", features = ["html_reports"] }

nebari = { path = "../nebari" }
pot = { git = "https://github.com/khonsulabs/pot.git", branch = "main" }

serde_json = { version = "1", optional = true }
rusqlite = { version = "0.25", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
http-auth-basic = { version = "0.3", optional = true }
_sled = { version = "0.34", optional = true, package = "sled" }
persy = { version = "1", optional = true }
