[package]
name = "nebari-fuzz"
version = "0.0.0"
publish = false
edition = "2021"
autotests = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tempfile = "3.3.0"

[dependencies.nebari]
path = "../nebari"

[[bin]]
name = "compare_swap"
path = "fuzz_targets/compare_swap.rs"
test = false
doc = false
