[package]
name = "nebari"
version = "0.1.0"
edition = "2018"
description = "ACID-compliant, append-only B-Tree storage inspired by Couchstore."
repository = "https://github.com/khonsulabs/nebari"
license = "MIT OR Apache-2.0"
keywords = ["btree", "database"]
categories = ["database-implementations"]
readme = "./README.md"

[features]
default = []

[dependencies]
thiserror = "1"
byteorder = "1"
flume = "0.10"
crc = "2"
once_cell = "1"
lru = "0.7"
parking_lot = "0.11"
tracing = { version = "0.1", optional = true }
ranges = "0.3"
num_cpus = "1.13"
backtrace = "0.3"

[dev-dependencies]
nanorand = "0.6"
anyhow = "1"
tempfile = "3"
