[package]
name = "nebari"
version = "0.5.1"
edition = "2021"
description = "ACID-compliant database storage implementation using an append-only file format."
repository = "https://github.com/khonsulabs/nebari"
license = "MIT OR Apache-2.0"
keywords = ["btree", "database"]
categories = ["database-implementations"]
readme = "../README.md"
rust-version = "1.56.1"

[features]
default = []
# Enable extra checks in release mode for Nebari. These checks are in all debug
# builds, but are normally disabled on release builds. These checks are meant to
# detect algorithmic problems, and do not help in any way against bit rot or
# drive related failures.
paranoid = []

[dependencies]
thiserror = "1.0.30"
byteorder = "1.4.3"
flume = "0.10.10"
crc = "3.0.0"
once_cell = "1.9.0"
lru = "0.7.0"
parking_lot = "0.12.0"
tracing = { version = "0.1.30", optional = true }
num_cpus = "1.13.1"
backtrace = "0.3.64"
arc-bytes = "0.3.2"

[dev-dependencies]
nanorand = "0.7.0"
anyhow = "1.0.53"
tempfile = "3.3.0"
